Fix padding, spacing, and alignments in all pages

--- a/styles/Details.module.css
+++ b/styles/Details.module.css
@@ -8,7 +8,7 @@
 .chip {
   display: flex;
   justify-content: center;
-  border: solid 1px rgba(255, 255, 255, 0.192);
+  border: solid 1px rgba(126, 126, 126, 0.918);
   border-radius: 20px;
   padding: 0.2rem 0rem;
   padding-bottom: 0.5rem;
@@ -22,6 +22,10 @@
   display: flex;
   justify-content: center;
   margin-top: 2.5rem;
+  border: 1px solid rgba(255, 255, 255, 0.13);
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  background-color: rgba(102, 102, 102, 0.062);
 }
 
 .detailsSkirt {
@@ -30,7 +34,7 @@
   margin: auto;
   margin-top: -0.4rem;
   padding: 1rem;
-  margin-bottom: 7rem;
+  margin-bottom: 4rem;
 }
 
 .authorChip {
