--- a/styles/List.module.css
+++ b/styles/List.module.css
@@ -28,29 +28,31 @@
 }
 
 .card {
-  /* background-color: rgba(46, 46, 46, 0.568); */
   padding: 1rem;
   border-radius: 1rem;
   width: 9.5rem;
   margin: 0.5rem;
+  background-color: rgba(46, 46, 46, 0.568);
+  border: 1px solid #ffffff1a;
 }
 .grid {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  margin-bottom: 4rem;
 }
 
 .cover {
   border-radius: 1rem;
 }
 .title {
-  font-size: 1rem;
+  font-size: 0.9rem;
   margin: 0.2rem;
 }
 
 .author {
   font-size: 0.9rem;
-  color: rgb(133, 133, 133);
+  color: rgba(255, 255, 255, 0.842);
   margin-left: 0.2rem;
 }
